Ui status view added

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,6 +26,20 @@
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintHorizontal_bias="0.0"
       />
+  <ProgressBar
+      android:id="@+id/progress"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginBottom="8dp"
+      android:layout_marginLeft="8dp"
+      android:layout_marginRight="8dp"
+      android:layout_marginTop="8dp"
+      app:layout_constraintBottom_toBottomOf="@+id/gist_list"
+      app:layout_constraintLeft_toLeftOf="parent"
+      app:layout_constraintRight_toRightOf="parent"
+      app:layout_constraintTop_toBottomOf="@+id/field_username"
+      style="?android:attr/progressBarStyle"
+      />
   <android.support.v7.widget.RecyclerView
       android:id="@+id/gist_list"
       android:layout_width="0dp"
@@ -33,11 +47,26 @@
       android:layout_marginBottom="8dp"
       android:layout_marginLeft="8dp"
       android:layout_marginRight="8dp"
+      android:layout_marginTop="8dp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintHorizontal_bias="0.0"
       app:layout_constraintLeft_toLeftOf="parent"
       app:layout_constraintRight_toRightOf="parent"
+      app:layout_constraintTop_toBottomOf="@+id/field_username"
+      app:layout_constraintVertical_bias="1.0"
+      />
+  <TextView
+      android:id="@+id/text_gist_status"
+      android:layout_width="0dp"
+      android:layout_height="wrap_content"
+      android:layout_marginLeft="8dp"
+      android:layout_marginRight="8dp"
       android:layout_marginTop="8dp"
+      android:text="No gist available"
+      android:textAlignment="center"
+      android:textSize="18sp"
+      app:layout_constraintLeft_toLeftOf="parent"
+      app:layout_constraintRight_toRightOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/field_username"
       />
 </android.support.constraint.ConstraintLayout>
