--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="me.anwarshahriar.rxjavademo.MainActivity"
+    tools:context="me.anwarshahriar.rxjavademo.view.MainActivity"
     tools:layout_editor_absoluteY="81dp"
     tools:layout_editor_absoluteX="0dp"
     >
@@ -18,7 +18,7 @@
       android:layout_marginRight="8dp"
       android:layout_marginTop="8dp"
       android:ems="10"
-      android:hint="Username"
+      android:hint="@string/hint_username"
       android:imeOptions="actionDone"
       android:inputType="textPersonName"
       app:layout_constraintLeft_toLeftOf="parent"
@@ -62,7 +62,7 @@
       android:layout_marginLeft="8dp"
       android:layout_marginRight="8dp"
       android:layout_marginTop="8dp"
-      android:text="No gist available"
+      android:text="@string/no_gist_status"
       android:textAlignment="center"
       android:textSize="18sp"
       app:layout_constraintLeft_toLeftOf="parent"
